--- a/Locale/jpn/LC_MESSAGES/school_informations.po
+++ b/Locale/jpn/LC_MESSAGES/school_informations.po
@@ -104,6 +104,11 @@ msgstr "番地"
 
 #: View/Elements/SchoolInformation/main.ctp:29
 #: View/SchoolInformations/edit.ctp:93
+msgid "Number Of Students"
+msgstr "生徒数"
+
+#: View/Elements/SchoolInformation/main.ctp:29
+#: View/SchoolInformations/edit.ctp:93
 msgid "Number Of Total Students"
 msgstr "全生徒数"
 
@@ -159,6 +164,9 @@ msgstr "〒%s"
 
 msgid "Adress:%3$s City:%2$s Prefecture:%1$s"
 msgstr "%1$s %2$s %3$s"
+
+msgid "Total students"
+msgstr "全生徒"
 
 msgid "Male"
 msgstr "男性"
