revert: 児童数の定義を元に戻す

--- a/Locale/jpn/LC_MESSAGES/school_informations.po
+++ b/Locale/jpn/LC_MESSAGES/school_informations.po
@@ -104,7 +104,7 @@ msgstr "番地"
 
 #: View/Elements/SchoolInformation/main.ctp:29
 #: View/SchoolInformations/edit.ctp:93
-msgid "Number Of Kids"
+msgid "Number Of Students"
 msgstr "児童数"
 
 #: View/Elements/SchoolInformation/main.ctp:29
