--- a/Locale/jpn/LC_MESSAGES/school_informations.po
+++ b/Locale/jpn/LC_MESSAGES/school_informations.po
@@ -105,23 +105,47 @@ msgstr "学校メールアドレス"
 msgid "Address"
 msgstr "番地"
 
-#: View/Elements/SchoolInformation/main.ctp:29
-#: View/SchoolInformations/edit.ctp:93
-msgid "Number Of Students"
+msgid "Number Of Kindergarten pupil"
+msgstr "園児数"
+
+msgid "Number Of Children"
 msgstr "児童数"
+
+msgid "Number Of Students"
+msgstr "生徒数"
 
 #: View/Elements/SchoolInformation/main.ctp:29
 #: View/SchoolInformations/edit.ctp:93
-msgid "Number Of Total Students"
+msgid "Number Of Total Kindergarten pupil"
+msgstr "全園児数"
+
+msgid "Number Of Total Children"
 msgstr "全児童数"
+
+msgid "Number Of Total Students"
+msgstr "全生徒数"
 
 #: View/Elements/SchoolInformation/main.ctp:29
 #: View/SchoolInformations/edit.ctp:93
 msgid "Number Of Male Students"
-msgstr "男子児童数"
+msgstr "男子数"
 
 msgid "Number Of Female Students"
-msgstr "女子児童数"
+msgstr "女子数"
+
+msgid "Number Of Children or Students"
+msgstr "児童・生徒数"
+
+msgid "Number Of Total Children or Total Students"
+msgstr "全児童・生徒数"
+
+#: View/Elements/SchoolInformation/main.ctp:29
+#: View/SchoolInformations/edit.ctp:93
+msgid "Number Of Male Children or Male Students"
+msgstr "男子数"
+
+msgid "Number Of Female Children or Female Students"
+msgstr "女子数"
 
 #: View/Elements/SchoolInformation/main.ctp:30;38
 msgid "%d persons"
@@ -168,20 +192,17 @@ msgstr "〒%s"
 msgid "Adress:%3$s City:%2$s Prefecture:%1$s"
 msgstr "%1$s %2$s %3$s"
 
-msgid "Total students"
+msgid "Total Children"
 msgstr "全児童"
+
+msgid "Total Students"
+msgstr "全生徒"
 
 msgid "Male"
 msgstr "男子"
 
 msgid "Female"
 msgstr "女子"
-
-msgid "Number Of Students"
-msgstr "児童数"
-
-msgid "Number Of Total Students"
-msgstr "全児童数"
 
 msgid "Display"
 msgstr "表示"
